test/fixtures/fail/unclosed_string_double.l4gs.g
; Unclosed double-quoted string.

        db "oops
